Reorganise styling of page to fix height wrapping issue and add very basic media queries for mobile support

--- a/app/src/global.css
+++ b/app/src/global.css
@@ -20,22 +20,9 @@ body {
 }
 
 #root {
-  height: 100%;
+  min-height: 100vh; /* Allows vertical alignment while also allowing scrolling if not enough height in viewport*/
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-
-/* @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
